bootstrap styling fixes for student-in-course page
test plan: visit the student-in-course page, the header shouldn't look
wonky

Reviewed-on: https://gerrit.instructure.com/18738
Tested-by: Jenkins <jenkins@instructure.com>
QA-Review: Clare Hetherington <clare@instructure.com>
Product-Review: Brian Palmer <brianp@instructure.com>

--- a/app/stylesheets/analytics.sass
+++ b/app/stylesheets/analytics.sass
@@ -15,7 +15,11 @@ div#analytics_body
     font-weight: bolder
 
   h2
+    font-size: 23px
+    font-weight: normal
     margin-bottom: 5px
+    line-height: 35px
+    margin-top: 0px
 
   div.student_summary
     padding-bottom: 15px
@@ -42,6 +46,10 @@ div#analytics_body
       h3
         margin-bottom: 0.5em
         text-align: right
+        font-size: 20px
+        font-weight: normal
+        line-height: 19px
+        margin-top: 0px
       .ui-combobox
         margin-right: 0
         float: right
